working on iphone swipper fix

--- a/unit1.5/services.css
+++ b/unit1.5/services.css
@@ -63,7 +63,7 @@
 }
 
 
-@media (max-width: 767px) and (max-resolution: 139dpi) {
+@media (max-width: 767px) and (max-resolution: 149dpi) {
    .repair-brands__list {
       overflow: scroll;
    }
